Added "undo last move" button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <div>
                         <button id="newBtn">New puzzle</button>
                         <button id="resetBtn">Reset</button>
+                        <button id="undoBtn">Undo Last Move</button>
                     </div>
                 </div>
             </header>
