+1 win animation. loading screen added
Added another win animation (scale down). Original animation is called ScaleUpScaleDown, now.
Added loading screen.
Added fireworks class, still to implement.

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
         <div id="colourRed" class="colourOption">RED</div>
         <div id="colourPurple" class="colourOption">PURPLE</div>
     </div>
+
+    <div id="loadingScreenContainer">
+        <div id="loadingScreenImage"><img src="./images/loadingScreen.png"></div>
+    </div>
 </body>
 
 </html>
