--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <script defer src="./js/main.js"></script>
     <script src="./js/LevelAndPointsClass.js"></script>
+    <script src="./js/FireworksClass.js"></script>
+    <link rel="stylesheet" href="./css/fireworks.css">
 </head>
 
 <body oncontextmenu="return false;">
@@ -83,12 +85,16 @@
 
     <div id="colourSettingsButton"><i class="fa-solid fa-eye"></i></div>
     <div id="colourOptions" class="hidden">
-        <div id="colourBlue" class="colourOption">BLUE</div>
-        <div id="colourGreen" class="colourOption">GREEN</div>
-        <div id="colourOrange" class="colourOption">ORANGE</div>
-        <div id="colourPink" class="colourOption">PINK</div>
-        <div id="colourRed" class="colourOption">RED</div>
-        <div id="colourPurple" class="colourOption">PURPLE</div>
+        <div id="colourBlue"    class="colourOption">BLUE</div>
+        <div id="colourGreen"   class="colourOption">GREEN</div>
+        <div id="colourOrange"  class="colourOption">ORANGE</div>
+        <div id="colourPink"    class="colourOption">PINK</div>
+        <div id="colourPurple"  class="colourOption">PURPLE</div>
+        <div id="colourRed"     class="colourOption">RED</div>
+    </div>
+
+    <div id="fireworksContainer">
+        <canvas id="fwCanvas"></canvas>
     </div>
 
     <div id="loadingScreenContainer">
