Loading Screen update + randomised win animation

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 
     <div id="loadingScreenContainer">
         <div id="loadingScreenImage"><img src="./images/loadingScreen.png"></div>
+        <div id="versionText">Version: </div>
     </div>
 </body>
 
