Added titles to top right buttons + strict bug fix

--- a/index.html
+++ b/index.html
@@ -84,19 +84,6 @@
     <div class="bonusGame rot270">BONUS GAME</div>
     <div class="bonusGame rot90">BONUS GAME</div>
 
-    <div id="mainButtonsContainer">
-        <div id="playerDetailsButton" class="mainButton"><i class="fa-solid fa-user"></i></div>
-        <div id="colourSettingsButton" class="mainButton"><i class="fa-solid fa-eye"></i></div>
-    </div>
-    <div id="colourOptions" class="hidden">
-        <div id="colourBlue"    class="colourOption">BLUE</div>
-        <div id="colourGreen"   class="colourOption">GREEN</div>
-        <div id="colourOrange"  class="colourOption">ORANGE</div>
-        <div id="colourPink"    class="colourOption">PINK</div>
-        <div id="colourPurple"  class="colourOption">PURPLE</div>
-        <div id="colourRed"     class="colourOption">RED</div>
-    </div>
-
     <div id="fireworksContainer">
         <canvas id="fwCanvas"></canvas>
     </div>
@@ -106,6 +93,18 @@
         <div id="versionText">Version: </div>
     </div>
 
+    <div id="mainButtonsContainer">
+        <div id="playerDetailsButton" class="mainButton" title="Player Details"><i class="fa-solid fa-user"></i></div>
+        <div id="colourSettingsButton" class="mainButton" title="Colour Scheme"><i class="fa-solid fa-eye"></i></div>
+    </div>
+    <div id="colourOptions" class="hidden">
+        <div id="colourBlue"    class="colourOption">BLUE</div>
+        <div id="colourGreen"   class="colourOption">GREEN</div>
+        <div id="colourOrange"  class="colourOption">ORANGE</div>
+        <div id="colourPink"    class="colourOption">PINK</div>
+        <div id="colourPurple"  class="colourOption">PURPLE</div>
+        <div id="colourRed"     class="colourOption">RED</div>
+    </div>
     <div id="playerStatsContainer" class="active">
         <div id="playerStatsInnerContainer">
             <div id="playerStatsTitle">Player Stats</div>
