Added new animations for Colour and Level Up
When the player increases to a new colour or level, the player data is shown and the Colour and Level is animated, followed by the container itself.
Added some debug stuff to track any weird updates to the player data.
Updated the cheat (solveBarOne) to add the game to played (as it was confusing the life out of the Colour and Level function ;)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="favicon.png">
 
-    <title>Sudoku</title>
+    <title>Sudoku by Offero04</title>
 
     <link rel="stylesheet" href="./css/main.css">
 
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="playerStatRow">
-                    <div class="playerStatLabel">Games played</div>
+                    <div class="playerStatLabel">Games Played</div>
                     <div id="gamesPlayed" class="playerStatValue">
                         <div class="statsEasy statLine">0</div>
                         <div class="statsMedium statLine">0</div>
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <div class="playerStatRow">
-                    <div class="playerStatLabel">Games won</div>
+                    <div class="playerStatLabel">Games Won</div>
                     <div id="gamesWon" class="playerStatValue">
                         <div class="statsEasy statLine">0</div>
                         <div class="statsMedium statLine">0</div>
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="playerStatRow">
-                    <div class="playerStatLabel">Win percentage</div>
+                    <div class="playerStatLabel">Win Percentage</div>
                     <div id="winPercentage" class="playerStatValue">
                         <div class="statsEasy statLine">0</div>
                         <div class="statsMedium statLine">0</div>
@@ -153,11 +153,11 @@
                     </div>
                 </div>
                 <div class="playerStatRowAlt" style="margin-top: 40px;">
-                    <div class="playerStatLabel">Total points</div>
+                    <div class="playerStatLabel">Total Points</div>
                     <div id="totalPoints" class="playerStatValue statsAccent">0</div>
                 </div>
                 <div class="playerStatRowAlt">
-                    <div class="playerStatLabel">Current level</div>
+                    <div class="playerStatLabel">Current Level</div>
                     <div id="currentLevel" class="playerStatValue statsAccent">0</div>
                 </div>
             </div>
