20 BG Images added
Added 20 background images.

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
     <div id="mainButtonsContainer">
         <div id="playerDetailsButton" class="mainButton" title="Player Details"><i class="fa-solid fa-user"></i></div>
+        <div id="backgroundImagesButton" class="mainButton" title="Background Images"><i class="fa-solid fa-image"></i></div>
         <div id="colourSettingsButton" class="mainButton" title="Colour Scheme"><i class="fa-solid fa-eye"></i></div>
     </div>
     <div id="colourOptions" class="hidden">
@@ -105,6 +106,7 @@
         <div id="colourPurple"  class="colourOption">PURPLE</div>
         <div id="colourRed"     class="colourOption">RED</div>
     </div>
+    <div id="bgImageOptions" class="hidden"></div>
     <div id="playerStatsContainer" class="active">
         <div id="playerStatsInnerContainer">
             <div id="playerStatsTitle">Player Stats</div>
