Added animated backgrounds
and functionality to switch to and from "normal" non-animated backgrounds.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <script defer src="./js/main.js"></script>
     <script src="./js/LevelAndPointsClass.js"></script>
     <script src="./js/FireworksClass.js"></script>
+    <script src="./js/ImageFieldClass.js"></script>
     <script src="./js/others/tests.js"></script>
     <link rel="stylesheet" href="./css/fireworks.css">
+    <link rel="stylesheet" href="./css/imageFieldClass.css">
 </head>
 
 <body oncontextmenu="return false;">
@@ -165,6 +167,10 @@
             </div>
             <div id="closePlayerStats">Close</div>
         </div>
+    </div>
+
+    <div id="animatedWallpaperContainer">
+        <canvas id="imageFieldCanvas"></canvas>
     </div>
 </body>
 
