Background Images Update v1.9
Modified how the backgrounds are changed as I implemented a third type of background called positioned image.
You can now select between textures, animated and positioned.

Refactored a lot of the init functions.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="./js/LevelAndPointsClass.js"></script>
     <script src="./js/FireworksClass.js"></script>
     <script src="./js/ImageFieldClass.js"></script>
-    <script defer src="./js/PositionedImageClass.js"></script>
+    <script src="./js/PositionedImageClass.js"></script>
 
     <script src="./js/others/tests.js"></script>
 
